--- a/src/UI-Translation/manifest.json
+++ b/src/UI-Translation/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "ui-translation",
   "name": "UI Translation",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "manifestURI": "https://raw.githubusercontent.com/dot-fx/seanime-extensions/master/src/UI-Translation/manifest.json",
   "language": "typescript",
   "type": "plugin",
@@ -14,7 +14,10 @@
   "plugin": {
     "version": "1",
     "permissions": {
-      "scopes": ["storage"]
+      "scopes": ["storage"],
+      "allow": {
+        "unsafeFlags": [{"flag": "dom-script-manipulation", "reason": "required for the plugin to work"}]
+      }
     }
   },
   "isDevelopment": false
