--- a/src/oneko/manifest.json
+++ b/src/oneko/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "oneko",
   "name": "Onekojs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "manifestURI": "https://raw.githubusercontent.com/dot-fx/seanime-extensions/master/src/oneko/manifest.json",
   "language": "typescript",
   "type": "plugin",
@@ -13,7 +13,12 @@
   "payloadURI": "https://raw.githubusercontent.com/dot-fx/seanime-extensions/master/src/oneko/main.ts",
   "plugin": {
     "version": "1",
-    "permissions": { }
+    "permissions": {
+      "scopes": [],
+      "allow": {
+        "unsafeFlags": [{"flag": "dom-script-manipulation", "reason": "required for the plugin to work"}]
+      }
+    }
   },
   "isDevelopment": false
 }
